Entfernen von /Debug

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 MCI-Anwendungen/Debug/
 MCI-Anwendungen/Release/
+MCI-Anwendungen/ipch/
+DirectX_Sound/Debug/
+DirectX_Sound/Release/
+DirectX_Sound/ipch/
 *.opensdf
 *.sdf
