--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,5 @@
-MCI-Anwendungen/Debug/
-MCI-Anwendungen/Release/
-MCI-Anwendungen/ipch/
-DirectX_Sound/Debug/
-DirectX_Sound/Release/
-DirectX_Sound/ipch/
-DirectX_Sound/DirectX_Sound/Debug/
-DirectX_Sound/DirectX_Sound/Release/
+Debug/
+Release/
+ipch/
 *.opensdf
 *.sdf
