Hinzufügen der Texture-Option

--- a/DirectX_3D/DirectX_3D/DirectX_3D.vcxproj
+++ b/DirectX_3D/DirectX_3D/DirectX_3D.vcxproj
@@ -137,4 +137,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="DirectX_3D.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
