--- a/DirectX_3D/DirectX_3D/DirectX_3D.vcxproj
+++ b/DirectX_3D/DirectX_3D/DirectX_3D.vcxproj
@@ -61,7 +61,7 @@
     <Link>
       <SubSystem>Windows</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>d3d9.lib;d3dx9.lib;winmm.lib</AdditionalDependencies>
+      <AdditionalDependencies>d3d9.lib;d3dx9.lib;winmm.lib;dinput8.lib;dxguid.lib</AdditionalDependencies>
     </Link>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
@@ -110,6 +110,7 @@
     <ClInclude Include="Direct3DObject.h" />
     <ClInclude Include="DirectX_3D.h" />
     <ClInclude Include="DirectX_3DDlg.h" />
+    <ClInclude Include="KeyInput.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -120,6 +121,7 @@
     <ClCompile Include="Direct3DObject.cpp" />
     <ClCompile Include="DirectX_3D.cpp" />
     <ClCompile Include="DirectX_3DDlg.cpp" />
+    <ClCompile Include="KeyInput.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
