--- a/Pixelgrafiken/Pixelgrafiken/Pixelgrafiken.vcxproj
+++ b/Pixelgrafiken/Pixelgrafiken/Pixelgrafiken.vcxproj
@@ -211,4 +211,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="Pixelgrafiken.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
