Implement converter in button event

--- a/WAV-MP3-Encoder/WAV-MP3-Encoder/WAV-MP3-Encoder.vcxproj.filters
+++ b/WAV-MP3-Encoder/WAV-MP3-Encoder/WAV-MP3-Encoder.vcxproj.filters
@@ -33,7 +33,7 @@
     <ClInclude Include="Resource.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
-    <ClInclude Include="DirectShow.h">
+    <ClInclude Include="AudioConverter.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
   </ItemGroup>
@@ -47,7 +47,7 @@
     <ClCompile Include="stdafx.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
-    <ClCompile Include="DirectShow.cpp">
+    <ClCompile Include="AudioConverter.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
