--- a/WAV-MP3-Encoder/WAV-MP3-Encoder/WAV-MP3-Encoder.vcxproj
+++ b/WAV-MP3-Encoder/WAV-MP3-Encoder/WAV-MP3-Encoder.vcxproj
@@ -101,7 +101,7 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="DirectShow.h" />
+    <ClInclude Include="AudioConverter.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
@@ -109,7 +109,7 @@
     <ClInclude Include="WAV-MP3-EncoderDlg.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DirectShow.cpp" />
+    <ClCompile Include="AudioConverter.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
@@ -129,4 +129,9 @@
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
+  <ProjectExtensions>
+    <VisualStudio>
+      <UserProperties RESOURCE_FILE="WAV-MP3-Encoder.rc" />
+    </VisualStudio>
+  </ProjectExtensions>
 </Project>
