Switch from VS2013 to VS2015

--- a/DirectX_Sound/DirectX_Sound/DirectX_Sound.vcxproj
+++ b/DirectX_Sound/DirectX_Sound/DirectX_Sound.vcxproj
@@ -14,12 +14,13 @@
     <ProjectGuid>{67A5557F-7916-46CD-9177-D7FC12D5B100}</ProjectGuid>
     <RootNamespace>DirectX_Sound</RootNamespace>
     <Keyword>MFCProj</Keyword>
+    <WindowsTargetPlatformVersion>8.1</WindowsTargetPlatformVersion>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
     <ConfigurationType>Application</ConfigurationType>
     <UseDebugLibraries>true</UseDebugLibraries>
-    <PlatformToolset>v120</PlatformToolset>
+    <PlatformToolset>v140</PlatformToolset>
     <CharacterSet>Unicode</CharacterSet>
     <UseOfMfc>Dynamic</UseOfMfc>
   </PropertyGroup>
